[package]
name = "foil"
version = "0.1.0"
authors = ["Daniel Meechan, Adriana Cucu, Andrew Ferguson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggez = "0.5.0"
structopt = "0.3"
rand = "0.7"

[target.wasm32-unknown-unknown.dependencies]
good-web-game = { git = "https://github.com/not-fl3/good-web-game"} #, features = ["nalgebra"] 
rand = { version = "0.7", features = ["stdweb"] }